--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext.kotlin_version = '1.3.0'
     ext.support_version = '28.0.0'
     ext.support_constraint_version = '1.1.3'
+    ext.dagger_version = '2.19'
+    ext.rx_version = '2.2.3'
+    ext.rx_android_version = '2.1.0'
     ext.junit_version = '4.12'
     ext.mockito_version = '2.23.0'
     ext.mockito_kotlin_version = '2.0.0'
