Initial network dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     ext.dagger_version = '2.19'
     ext.rx_version = '2.2.3'
     ext.rx_android_version = '2.1.0'
+    ext.retrofit_version = '2.4.0'
+    ext.okhttp_version = '3.11.0'
     ext.junit_version = '4.12'
     ext.mockito_version = '2.23.0'
     ext.mockito_kotlin_version = '2.0.0'
