--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,8 @@ android {
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField 'String', 'BASE_URL', '"https://api.themoviedb.org"'
             buildConfigField 'String', 'IMAGE_URL', '"https://image.tmdb.org"'
         }
