--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.rx_android_version = '2.1.0'
     ext.retrofit_version = '2.4.0'
     ext.okhttp_version = '3.11.0'
+    ext.glide_version = '4.8.0'
     ext.junit_version = '4.12'
     ext.mockito_version = '2.23.0'
     ext.mockito_kotlin_version = '2.0.0'
