--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,12 @@ android {
             buildConfigField 'String', 'BASE_URL', '"https://api.themoviedb.org"'
             buildConfigField 'String', 'IMAGE_URL', '"https://image.tmdb.org"'
         }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'BASE_URL', '"https://api.themoviedb.org"'
+            buildConfigField 'String', 'IMAGE_URL', '"https://image.tmdb.org"'
+        }
     }
 }
 
